external-crates/move/crates/move-compiler/tests/move_2024/parser/positional_with_named_struct_field.exp
error[E02008]: invalid 'struct' declaration
  ┌─ tests/move_2024/parser/positional_with_named_struct_field.move:3:23
  │
3 │     public struct Foo(f: u64) has copy, drop;
  │                       ^^ Invalid named field declaration in a struct that can contain only positional fields

